# backlog-synthesizer

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  demo.py  pyproject.toml
.github/workflows/: test.yml
data/: sample_backlog.json  sample_transcript.txt
data/golden_dataset/: expected_01_authentication.json  expected_02_performance.json  expected_03_ux_improvements.json  golden_entries.json  transcript_01_authentication.txt  transcript_02_performance.txt  transcript_03_ux_improvements.txt
src/backlog_synthesizer/: __init__.py  config.py  (+1 more)
tests/: conftest.py  test_audit_log.py  test_backlog_ticket_validation.py  test_concurrent_execution.py  test_config_coverage.py  test_data_model_properties.py  test_epic_grouping.py  test_evaluation_cli.py  test_evaluation_framework.py  test_few_shot_store.py  test_gap_classification_fields.py  test_gap_detection_agent.py  test_gap_detection_properties.py  test_gap_prefilter.py  test_long_term_memory.py  test_main.py  test_memory_engine.py  test_memory_properties.py  test_observability.py  test_orchestrator.py  test_orchestrator_retry.py  test_orchestrator_retry_properties.py  test_output_serialization.py  test_parser_chunking.py  test_parser_chunking_properties.py  test_parser_document_properties.py  test_parser_extraction.py  test_parser_ingestion.py  test_react_orchestrator.py  test_short_term_memory.py  test_story_writer_agent.py  test_story_writer_properties.py  test_tools_anthropic.py  test_tools_document_parsing.py  test_tools_embedding_coverage.py  test_tools_openai.py  test_tools_vector_search_coverage.py
(+40 files in other folders)
