[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backlog-synthesizer"
version = "0.1.0"
description = "A multi-agent system for generating structured user stories from meeting transcripts and architecture documents."
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = "MIT"

dependencies = [
    "pydantic>=2.5.0,<3.0.0",
    "chromadb>=0.5.0",
    "pymupdf>=1.23.0,<2.0.0",
    "openai>=1.10.0",
    "anthropic>=0.39.0",
    "sentence-transformers>=2.2.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "hypothesis>=6.92.0,<7.0.0",
    "mypy>=1.8.0,<2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backlog_synthesizer"]

[tool.hatch.build.targets.editable]
packages = ["src/backlog_synthesizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.hypothesis]
max_examples = 100
